add statistics management by admin
