# storage/api-docs/api-docs.json
@@ -735,6 +735,25 @@
                 ]
             }
         },
+        "/admin/statistics": {
+            "get": {
+                "tags": [
+                    "Admin - Statistics"
+                ],
+                "description": "Get statistics",
+                "operationId": "2af432095f9c9c356e9861cfbd3feec5",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/admin/users": {
             "get": {
                 "tags": [
@@ -1802,6 +1821,10 @@
         {
             "name": "Roles",
             "description": "Roles"
+        },
+        {
+            "name": "Admin - Statistics",
+            "description": "Admin - Statistics"
         },
         {
             "name": "Admin - Users",
